[package]
name = "q-learning-breakout"
version = "0.3.0"
edition = "2021"
authors = ["Roman Krüger<bitmagier@mailbox.org>"]
description = "Reinforcement Learning | Deep-Q-Learning | Tensorflow | Breakout"
repository = "git@github.com:bitmagier/q-learning-breakout.git"
default-run = "breakout-egui-user-game"

[dev-dependencies]
rstest = "0.17"
ctor = "0.2"

[dependencies]
log = "0.4"
env_logger = "0.10"
itertools = "0.10"
lazy_static = "1.4"
egui = "0.22.0"
eframe = "0.22.0"
parry2d = "0.13"
nalgebra = "0.32"
image = "0.24"
tensorflow = { version = "0.20.0", features = ["tensorflow_gpu"] }
rand = "0"
tempfile = "3"
plotters = "0.3"
console_engine = "2.6"

[badges]
maintenance = { status = "as-is" }

[[bin]]
name = "breakout-egui-user-game"

