[package]
name = "ql-with-tensorflow"
version = "0.4.1"
edition = "2021"
authors = ["Roman Krüger<bitmagier@mailbox.org>"]
description = "Reinforcement Learning | Deep-Q-Learning | Tensorflow"
repository = "git@github.com:bitmagier/q-learning.git"
rust-version = "1.82.0"

[badges]
maintenance = { status = "as-is" }

[dependencies]
ql = { path = "../ql" }
rustc-hash = "1.1"
log = "0.4"
env_logger = "0.10"
itertools = "0.11"
anyhow = "1"
num-traits = "0.2"
num-format = "0.4"
lazy_static = "1.4"
rand = "0.8"
tempfile = "3.7"
glob = "0.3"
console_engine = "2.6"
tensorflow = { version = "0.20.0", features = ["tensorflow_gpu"] }

[dev-dependencies]
rstest = "0.18"
ctor = "0.2"

[[test]]
name = "learn_ballgame"
test = false

[[test]]
name = "render_ballgame_cases"
test = false
