[package]
name = "ql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
anyhow = "1"
rand = "0.8"
itertools = "0.11"
console_engine = "2.6"
num-traits = "0.2"
num-format = "0.4"

[dev-dependencies]
rstest = "0.18"
